[gd_scene load_steps=3 format=3 uid="uid://r85aypvaqq3k"]

[ext_resource type="Script" uid="uid://cjjwx18tly78r" path="res://scripts/hotbar.gd" id="1_4qkdb"]
[ext_resource type="PackedScene" uid="uid://d0mq0a785re76" path="res://scenes/slot.tscn" id="1_yj1xu"]

[node name="Hotbar" type="Node2D"]
script = ExtResource("1_4qkdb")

[node name="Slot1" parent="." instance=ExtResource("1_yj1xu")]

[node name="Slot2" parent="." instance=ExtResource("1_yj1xu")]
position = Vector2(100, 0)

[node name="Slot3" parent="." instance=ExtResource("1_yj1xu")]
position = Vector2(200, 0)

[node name="Slot4" parent="." instance=ExtResource("1_yj1xu")]
position = Vector2(300, 0)

[node name="Slot5" parent="." instance=ExtResource("1_yj1xu")]
position = Vector2(400, 0)

[node name="Slot6" parent="." instance=ExtResource("1_yj1xu")]
position = Vector2(500, 0)

[node name="Slot7" parent="." instance=ExtResource("1_yj1xu")]
position = Vector2(600, 0)
